Fix: Podcast category spacing on mobile

--- a/src/css/HomePage.styles.css
+++ b/src/css/HomePage.styles.css
@@ -124,7 +124,7 @@
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    margin: 0 -20px;
+    margin: 0 -25px;
     width: calc(100% + 40px);
     padding: 0 20px;
   }
